[core] merged engines and plugins